# To-Do-k8s

./: README.md
To-Do-k8s/: db-deployment.yaml  docker-compose.yml  docker-fastapi-deployment.yaml  nginx-deployment.yaml  nginx-service.yaml  pyproject.toml
To-Do-k8s/backend/: Dockerfile  requirements.txt
To-Do-k8s/backend/app/: main.py
To-Do-k8s/frontend/: Dockerfile  package-lock.json  package.json
To-Do-k8s/frontend/public/: index.html
To-Do-k8s/frontend/src/: App.css  App.js  services.js
To-Do-k8s/frontend/src/components/: DashBoard.js  Footer.js  Intro.js  Logout.js
To-Do-k8s/frontend/src/components/forms/: LoginForm.js  SignupForm.js
To-Do-k8s/frontend/src/components/navs/: DashNav.js  LandingNav.js  LoginNav.js  SignUpNav.js
To-Do-k8s/kubernetes/: backend-deployment.yaml  mongo-deployment.yaml  mongo-service.yml
To-Do-k8s/tests/: test_to_do_k8s.py
