[tool.poetry]
name = "To-Do-k8s"
version = "0.1.0"
description = ""
authors = ["Sarang Ravindra <cobalt0405@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
pymongo = "^3.11.3"
uvicorn = "^0.13.4"
python-jose = "^3.2.0"
passlib = "^1.7.4"
jose = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
